updated codingbat homework#

--- a/homework/hw8pr2_coding_bat.ipynb
+++ b/homework/hw8pr2_coding_bat.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# hw9pr2.py (CodingBat)\n",
+    "# hw8pr2.py (CodingBat)\n",
     "https://www.cs.hmc.edu/twiki/bin/view/CS5/GoldHw8Pr2"
    ]
   },
@@ -503,37 +503,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "10%3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_list1 = [1,2,3,4,5,6,7,8,9,10]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
    "outputs": [],
@@ -782,6 +751,35 @@
    "source": [
     "### 10. List-2 > centered_average  \n",
     "Return the \"centered\" average of an array of ints, which we'll say is the mean average of the values, except ignoring the largest and smallest values in the array. If there are multiple copies of the smallest value, ignore just one copy, and likewise for the largest value. Use int division to produce the final average. You may assume that the array is length 3 or more."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = [1,2,3,4,5,6,7,8,9,10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array[1:-1]"
    ]
   },
   {
